Actualizacion y ordenacion de archivos